fixed webp images on mobile as well

--- a/src/styles/sass/_pieces.scss
+++ b/src/styles/sass/_pieces.scss
@@ -9,27 +9,27 @@
     }
 
     &-angry {
-      background-image: url('/assets/images/elements/board_pieces/angry.gif');
+      background-image: url('/assets/images/elements/board_pieces/angry.webp');
       font-size: 0 !important;
     }
 
     &-fire {
-      background-image: url('/assets/images/elements/board_pieces/fire.gif');
+      background-image: url('/assets/images/elements/board_pieces/fire.webp');
       font-size: 0 !important;
     }
 
     &-nosee {
-      background-image: url('/assets/images/elements/board_pieces/nosee.gif');
+      background-image: url('/assets/images/elements/board_pieces/nosee.webp');
       font-size: 0 !important;
     }
 
     &-nospeak {
-      background-image: url('/assets/images/elements/board_pieces/nospeak.gif');
+      background-image: url('/assets/images/elements/board_pieces/nospeak.webp');
       font-size: 0 !important;
     }
 
     &-nohear {
-      background-image: url('/assets/images/elements/board_pieces/nohear.gif');
+      background-image: url('/assets/images/elements/board_pieces/nohear.webp');
       font-size: 0 !important;
     }
   }
